--- a/about.html
+++ b/about.html
@@ -80,8 +80,7 @@
 		              <div class="icon"><span class="flaticon-mountains"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Adventures</h3>
-		                <p>The best part of your vacation
-Join the millions of travelers who make the most of their vacations through Destination tours & adventures</p>
+		                <p>The best part of your vacationJoin the millions of travelers who make the most of their vacations through Destination tours & adventures</p>
 		              </div>
 		            </div>      
 		          </div>
@@ -220,7 +219,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 		                <span>Amazing Deals</span>
 		              </div>
 		            </div>
-		          
+		          </div> 
 		        </div>
 	        </div>
         </div>
@@ -269,18 +268,12 @@ Join the millions of travelers who make the most of their vacations through Dest
           </div>
 
           <div class="testimonial" id="test-2">
-            <p>Just wanted to say many, many thanks for helping me set up an amazing Costa Rican adventure! My nephew and I had a blast! All of the accommodations were perfect as were the activities that we did (canopy, coffee tour, hikes, fishing, and massages!)
-
-We have such fond memories and can't thank you enough!
-
-you rock! Can't wait to figure out my next adventure!</p>
+            <p>Just wanted to say many, many thanks for helping me set up an amazing Costa Rican adventure! My nephew and I had a blast! All of the accommodations were perfect as were the activities that we did (canopy, coffee tour, hikes, fishing, and massages!)We have such fond memories and can't thank you enough!you rock! Can't wait to figure out my next adventure!</p>
             <span class="description">Kelly / France</span>
           </div>
 
           <div class="testimonial" id="test-3">
-            <p>We would like to thank you for your outstanding service!!  The recent African trip you customized for the Carlstedt's and Tolliver's was amazing!! We can't think of one thing we would have changed on this trip.  We loved the variety of lodgings we stay in and all logistics went according to plan.
-
-We did not have to worry about a thing.  It was a perfect trip that we will always remember as one of our very best!</p>
+            <p>We would like to thank you for your outstanding service!!  The recent African trip you customized for the Carlstedt's and Tolliver's was amazing!! We can't think of one thing we would have changed on this trip.  We loved the variety of lodgings we stay in and all logistics went according to plan.We did not have to worry about a thing.  It was a perfect trip that we will always remember as one of our very best!</p>
             <span class="description">Thomas / Japan</span>
           </div>
 
@@ -353,7 +346,7 @@ We did not have to worry about a thing.  It was a perfect trip that we will alwa
           <div class="col-md-12 text-center">
 
             <p>
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart color-danger" aria-hidden="true"></i> </a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart color-danger" aria-hidden="true"></i> 
   </p>
           </div>
         </div>
@@ -382,7 +375,6 @@ We did not have to worry about a thing.  It was a perfect trip that we will alwa
   <script src="assets/js/jquery.animateNumber.min.js"></script>
   <script src="assets/js/bootstrap-datepicker.js"></script>
   <script src="assets/js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="assets/js/google-map.js"></script>
   <script src="assets/js/main.js"></script>
     
