--- a/book.html
+++ b/book.html
@@ -112,7 +112,6 @@
                 <label for="date-start">Price Range</label>: $
                 <span id="price" class="price">1000</span>
                 <input type="range" min="23" max="1000" value="1000" class="slider" id="myRange">
-                </p>
               </div>
             </div>
             <div class="row form-group">
@@ -187,7 +186,7 @@
           <div class="col-md-12 text-center">
 
             <p>
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart color-danger" aria-hidden="true"></i> </a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart color-danger" aria-hidden="true"></i> 
   </p>
           </div>
         </div>
@@ -214,7 +213,6 @@
   <script src="assets/js/jquery.animateNumber.min.js"></script>
   <script src="assets/js/bootstrap-datepicker.js"></script>
   <script src="assets/js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="assets/js/google-map.js"></script>
   <script src="assets/js/main.js"></script>
     
