--- a/contact.html
+++ b/contact.html
@@ -228,8 +228,7 @@
   <script src="assets/js/jquery.animateNumber.min.js"></script>
   <script src="assets/js/bootstrap-datepicker.js"></script>
   <script src="assets/js/scrollax.min.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-nNMm3QeOUilp90E8kibDufs-SuoIgak&callback=initMap"
-  type="text/javascript"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-nNMm3QeOUilp90E8kibDufs-SuoIgak&callback=initMap"></script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
   <script src="assets/js/google-map.js"></script>
   <script src="assets/js/main.js"></script>
