changed footer text

--- a/about.html
+++ b/about.html
@@ -331,7 +331,7 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<h2 class="ftco-heading-2">Let's Have A Talk !</h2>
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Gamla Brogatan 26, 111 20, Stockholm, Sweden</span></li>
