--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
     <section class="ftco-section ftco-no-pb contact-section">
       <div class="container">
         <div class="row d-flex contact-info">
-          <div class="col-md-3 d-flex">
+          <div class="col-md-4 d-flex">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-map-signs"></span>
@@ -77,7 +77,7 @@
 	            <p>Gamla Brogatan 26, 111 20, Stockholm, Sweden</p>
 	          </div>
           </div>
-          <div class="col-md-3 d-flex">
+          <div class="col-md-4 d-flex">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
@@ -86,22 +86,13 @@
 	            <p><a href="tel://4670235598">+ 4670 2355 98</a></p>
 	          </div>
           </div>
-          <div class="col-md-3 d-flex">
-          	<div class="align-self-stretch box p-4 text-center">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-paper-plane"></span>
-          		</div>
-          		<h3 class="mb-2">Email Address</h3>
-	            <p><a href="mailto:info@destination.com">info@destinations.com</a></p>
-	          </div>
-          </div>
-          <div class="col-md-3 d-flex">
+          <div class="col-md-4 d-flex">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-globe"></span>
           		</div>
-          		<h3 class="mb-2">Website</h3>
-	            <p><a href="#">destinations.com</a></p>
+          		<h3 class="mb-2">Email Address</h3>
+	            <p><a href="mailto:info@destination.com">info@destinations.com</a></p>
 	          </div>
           </div>
         </div>
@@ -116,10 +107,10 @@
           <div class="col-md-6 order-md-last d-flex">
             <form action="#" class="bg-light p-5 contact-form">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name">
+                <input type="text" class="form-control" placeholder="Name">
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Email">
+                <input type="text" class="form-control" placeholder="Email">
               </div>
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Subject">
