content to footer

--- a/book.html
+++ b/book.html
@@ -128,11 +128,11 @@
  <!--end of booktrip-->   
 
     
-    <!--footer-->
+   <!--footer-->
     <footer class="ftco-footer bg-bottom" style="background-image: url(assets/images/footer.png);">
       <div class="container">
         <div class="row mb-5">
-          <div class="col-md">
+          <div class="col-md-4">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Destinations</h2>
               <p>Destinations is an outdoor lifestyle, creative culture and sustainable living journal that celebrates the stories of passionate people inspired by travel.</p>
@@ -143,20 +143,8 @@
               </ul>
             </div>
           </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4 ml-md-5">
-              <h2 class="ftco-heading-2">Infromation</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Online Enquiry</a></li>
-                <li><a href="#" class="py-2 d-block">General Enquiries</a></li>
-                <li><a href="#" class="py-2 d-block">Booking Conditions</a></li>
-                <li><a href="#" class="py-2 d-block">Privacy and Policy</a></li>
-                <li><a href="#" class="py-2 d-block">Refund Policy</a></li>
-                <li><a href="#" class="py-2 d-block">Call Us</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
+          
+          <div class="col-md-4">
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Popular Destinations</h2>
               <ul class="list-unstyled">
@@ -169,7 +157,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md-4">
             <div class="ftco-footer-widget mb-4">
             	<h2 class="ftco-heading-2">Let's Have A Talk !</h2>
             	<div class="block-23 mb-3">
@@ -186,14 +174,13 @@
           <div class="col-md-12 text-center">
 
             <p>
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart color-danger" aria-hidden="true"></i> 
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart color-danger" aria-hidden="true"></i> </a>
   </p>
           </div>
         </div>
       </div>
     </footer>
     <!--end offooter-->
-  
   
 
   <!-- loader -->
