content to footer

--- a/about.html
+++ b/about.html
@@ -307,17 +307,23 @@
           <div class="col-md-4">
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Popular Destinations</h2>
-              <ul class="list-unstyled">
+               <div class="row mb-5">
+              <ul class="list-unstyled col-md-4">
                 <li><a href="#" class="py-2 d-block">India</a></li>
                 <li><a href="#" class="py-2 d-block">Japan</a></li>
                 <li><a href="#" class="py-2 d-block">UK</a></li>
+                <li><a href="#" class="py-2 d-block">Egypt</a></li>
+              </ul>
+               <ul class="list-unstyled col-md-4">
                 <li><a href="#" class="py-2 d-block">Australia</a></li>
                 <li><a href="#" class="py-2 d-block">Greece</a></li>
                 <li><a href="#" class="py-2 d-block">Sweden</a></li>
+                <li><a href="#" class="py-2 d-block">Maldives</a></li>
               </ul>
             </div>
           </div>
-          <div class="col-md-4">
+          </div>
+          <div class="col-md-3">
             <div class="ftco-footer-widget mb-4">
             	<h2 class="ftco-heading-2">Let's Have A Talk !</h2>
             	<div class="block-23 mb-3">
