--- a/contact.html
+++ b/contact.html
@@ -213,7 +213,8 @@
   <script src="assets/js/jquery.animateNumber.min.js"></script>
   <script src="assets/js/bootstrap-datepicker.js"></script>
   <script src="assets/js/scrollax.min.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA12L_av-6HAHssW3j1r54L_tsV75HyIO0&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA12L_av-6HAHssW3j1r54L_tsV75HyIO0&callback=initMap"
+  type="text/javascript"></script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
   <script src="assets/js/google-map.js"></script>
   <script src="assets/js/main.js"></script>
