--- a/contact.html
+++ b/contact.html
@@ -200,7 +200,7 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 	 
-  <script src="assets/js/main.js"></script>  
+  
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/jquery-migrate-3.0.1.min.js"></script>
   <script src="assets/js/popper.min.js"></script>
@@ -214,6 +214,8 @@
   <script src="assets/js/jquery.animateNumber.min.js"></script>
   <script src="assets/js/bootstrap-datepicker.js"></script>
   <script src="assets/js/scrollax.min.js"></script>
+  <script src="assets/js/google-map.js"></script>
+  <script src="assets/js/main.js"></script>
      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpYGDKcCFkg9cyFsacNBVqlB6l3g2Ftm4&callback=initMap"
   type="text/javascript"></script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
