added new cards to Vacation page ,styles to vacation

--- a/Vacation.html
+++ b/Vacation.html
@@ -64,28 +64,30 @@
     <section class="ftco-section">
     	<h1 class="c-title">
    Inspiration For Your <br/>Next Vacation</h1>
+   <div class="row">
+   <div class="col-md-4">
 <ul class="c-featurette">
-  <li class="c-featurette__item"><img class="c-featurette__background" src="https://i0.wp.com/s1.uphinh.org/2020/05/07/vivek-sharma-XjK_DibL2L4-unsplash.jpg"/><small class="c-featurette__category">Summer</small>
-    <h2 class="c-featurette__heading">India</h2>
-    <button class="c-featurette__button">Discover</button>
-  </li>
-  <li class="c-featurette__item">  <img class="c-featurette__background" src="https://i0.wp.com/s1.uphinh.org/2020/05/07/yu-kato-cddaZDt6uRw-unsplash.jpg"/><small class="c-featurette__category">Tradition</small>
-    <h2 class="c-featurette__heading">Japan</h2>
-    <button class="c-featurette__button">Discover</button>
-  </li>
-  <li class="c-featurette__item">  <img class="c-featurette__background" src="https://i0.wp.com/s1.uphinh.org/2020/05/07/kevin-langlais-QveJH1hA2sI-unsplash.jpg"/><small class="c-featurette__category">Popular</small>
-    <h2 class="c-featurette__heading">Egypt</h2>
-    <button class="c-featurette__button">Discover</button>
-  </li>
-  <li class="c-featurette__item">     <img class="c-featurette__background" src="https://i0.wp.com/s1.uphinh.org/2020/05/07/nathan-ziemanski-hjW4o5XfCzc-unsplash.jpg"/><sma.jpgll class="c-featurette__category">Beaches</small>
-    <h2 class="c-featurette__heading">Hawaii</h2>
-    <button class="c-featurette__button">Discover</button>
-  </li>
-  <li class="c-featurette__item">     <img class="c-featurette__background" src="https://i0.wp.com/s1.uphinh.org/2020/05/07/davide-grieco-zxAJ3JFXpDQ-unsplash-1.jpg"/><small class="c-featurette__category">City</small>
-    <h2 class="c-featurette__heading">Greece</h2>
-    <button class="c-featurette__button">Discover</button>
+  <li class="c-featurette__item"><img class="c-featurette__background" src="https://i0.wp.com/s1.uphinh.org/2020/05/07/vivek-sharma-XjK_DibL2L4-unsplash.jpg"/><small class="c-featurette__category">Culture</small>
+    <h2 class="c-featurette__heading"> India</h2>
   </li>
 </ul>
+   </div>
+    <div class="col-md-4">
+    <ul class="c-featurette">
+  <li class="c-featurette__item">  <img class="c-featurette__background" src="https://i0.wp.com/s1.uphinh.org/2020/05/07/yu-kato-cddaZDt6uRw-unsplash.jpg"/><small class="c-featurette__category">Tradition</small>
+    <h2 class="c-featurette__heading"> Japan</h2>
+  </li>
+    </ul>
+    </div>
+      <div class="col-md-4">
+      <ul class="c-featurette">
+  <li class="c-featurette__item">  <img class="c-featurette__background" src="https://i0.wp.com/s1.uphinh.org/2020/05/07/kevin-langlais-QveJH1hA2sI-unsplash.jpg"/><small class="c-featurette__category">History</small>
+    <h2 class="c-featurette__heading"> Egypt</h2>
+  </li> 
+      </ul>
+      </div>
+</ul>
+   </div>
     </section>
     <!---end of top-->
 
