added form to book page

--- a/book.html
+++ b/book.html
@@ -64,13 +64,9 @@
     <!--end of hero image-->
 
 <!--book a trip-->
-    <section class="ftco-section">
-     <div class="container">
-    <div class="row mt-2 ">
-      <div class="col-md-7 mt-text text-white align-self-center mb-2">
-		<img src="assets/images/book3.jpg" alt="portfolio image"/>
-      </div>
-      <div class="col-md-5 col-md-push-1">
+  <section class="ftco-section">
+     <div class="container"> 
+  <div class="col-md-12 align-self-center mb-2 ">
         <div class=" form-card">
           <h3>Book Your Trip</h3>
           <form action="#">
@@ -109,9 +105,10 @@
             </div>
             <div class="row form-group">
               <div class="col-md-12">
-                <label for="date-start">Price Range</label>: $
+                <label for="date-start">Price Range</label>: £
                 <span id="price" class="price">1000</span>
                 <input type="range" min="23" max="1000" value="1000" class="slider" id="myRange">
+                </p>
               </div>
             </div>
             <div class="row form-group">
