added texxt to adventures section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 						<div class="feature-details">
 							<h5>Desert Riding  <br>
 								adventures</h5>
-							<p>Join a group of adventure-seekers for 11 days as they travel  the world's largest sand desert on camel back.</p>
+							<p>Join a group of adventure-seekers for 11 days as they travel  the world's largest sand desert on camel back and deep into the heart of the desert.</p>
 							<a href="#" class="primary-btn mb-40">Read More</a>
 						</div>
 						<div class="feature-thumb">
