comments to styles

--- a/Vacation.html
+++ b/Vacation.html
@@ -60,7 +60,8 @@
       </div>
     </section>
     <!--end of hero image-->
-<!--top destinations-->
+
+<!--next vacation-->
     <section class="ftco-section">
     	<h1 class="c-title">
    Inspiration For Your <br/>Next Vacation</h1>
@@ -89,7 +90,7 @@
 </ul>
    </div>
     </section>
-    <!---end of top-->
+    <!---end of next vacation-->
 
 <!-- Offers -->
 
