--- a/index.html
+++ b/index.html
@@ -146,52 +146,52 @@
     <!--adventure-->
     <section class="feature-area section_gap_top">
 		<div class="container">
-        <div class="row align-items-end justify-content-left">
-				<div class="col-lg-12">
-				</div>
+                <div class="row align-items-end justify-content-left">
+		<div class="col-lg-12">
+		/div>
+		</div>
+		<div class="row">
+			<!-- single-feature -->
+			<div class="col-lg-4 col-md-6">
+			<div class="single-feature">
+			<div class="feature-details">
+			<h5>Desert Riding  <br>
+			  adventures</h5>
+			<p>Join a group of adventure-seekers for 11 days as they travel  the world's largest sand desert on camel back and deep into the heart of the desert.</p>
+			<a href="#" class="primary-btn mb-40">Read More</a>
 			</div>
-			<div class="row">
-				<!-- single-feature -->
-				<div class="col-lg-4 col-md-6">
-					<div class="single-feature">
-						<div class="feature-details">
-							<h5>Desert Riding  <br>
-								adventures</h5>
-							<p>Join a group of adventure-seekers for 11 days as they travel  the world's largest sand desert on camel back and deep into the heart of the desert.</p>
-							<a href="#" class="primary-btn mb-40">Read More</a>
-						</div>
-						<div class="feature-thumb">
-							<img class="img-fluid" src="assets/images/desert.jpg" alt="">
-						</div>
-					</div>
-				</div>
-				<!-- single-feature -->
-				<div class="col-lg-4 col-md-6">
-					<div class="single-feature">
-						<div class="feature-details">
-							<h5>Relaxation in the <br>
-								Local Beach Campfire</h5>
-							<p>There's nothing better than gathering around a big beach bonfire after a day of swimming, surfing or sunbathing.</p>
-							<a href="#" class="primary-btn mb-40">Read More</a>
-						</div>
-						<div class="feature-thumb">
-							<img class="img-fluid" src="assets/images/fire.jpg" alt="">
-						</div>
-					</div>
-				</div>
-				<!-- single-feature -->
-				<div class="col-lg-4 col-md-6">
-					<div class="single-feature">
-						<div class="feature-details">
-							<h5>Forest Exploration <br>Rainforest</h5>
-							<p>Explore the oldest protected Rainforest in the western hemisphere. Experience the wonderful world of this ancient creation.</p>
-							<a href="#" class="primary-btn mb-40">Read More</a>
-						</div>
-						<div class="feature-thumb">
-							<img class="img-fluid" src="assets/images/forest.jpg" alt="">
-						</div>
-					</div>
-				</div>
+			<div class="feature-thumb">
+			<img class="img-fluid" src="assets/images/desert.jpg" alt="">
+			</div>
+			</div>
+			</div>
+			<!-- single-feature -->
+			<div class="col-lg-4 col-md-6">
+			<div class="single-feature">
+			<div class="feature-details">
+			<h5>Relaxation in the <br>
+			Local Beach Campfire</h5>
+			<p>There's nothing better than gathering around a big beach bonfire after a day of swimming, surfing or sunbathing.</p>
+			<a href="#" class="primary-btn mb-40">Read More</a>
+			</div>
+			<div class="feature-thumb">
+			<img class="img-fluid" src="assets/images/fire.jpg" alt="">
+			</div>
+			</div>
+			</div>
+			<!-- single-feature -->
+			<div class="col-lg-4 col-md-6">
+			<div class="single-feature">
+			<div class="feature-details">
+			<h5>Forest Exploration <br>Rainforest</h5>
+			<p>Explore the oldest protected Rainforest in the western hemisphere. Experience the wonderful world of this ancient creation.</p>
+			<a href="#" class="primary-btn mb-40">Read More</a>
+			</div>
+			<div class="feature-thumb">
+			<img class="img-fluid" src="assets/images/forest.jpg" alt="">
+			</div>
+			</div>
+			</div>
 			</div>
 		</div>
 	</section>
@@ -211,14 +211,13 @@
 						<div class="gallery-content">
 						  	<div class="filtr-container">
 						  		<div class="row">
-
 						  			<div class="col-md-6">
 						  				<div class="filtr-item">
 											<img src="assets/images/india.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">India</a>
 												<p><span>20 tours</span></p>
-                                                <p><span>15 places</span></p>
+                                                                                                <p><span>15 places</span></p>
 											</div>
 										</div>
 						  			</div>
@@ -229,7 +228,7 @@
 											<div class="item-title">
 												<a href="#">London</a>
 												<p><span>12 tours</span></p>
-                                                <p><span>9 places</span></p>
+                                                                                                <p><span>9 places</span></p>
 											</div> 
 										</div>
 						  			</div>
@@ -240,7 +239,7 @@
 											<div class="item-title">
 												<a href="#">Egypt</a>
 												<p><span>25 tours</span></p>
-                                                <p><span>10 places</span></p>
+                                                                                                <p><span>10 places</span></p>
 											</div>
 										</div>
 						  			</div>
@@ -251,7 +250,7 @@
 											<div class="item-title">
 												<a href="#">Maldives</a>
 												<p><span>10 tours</span></p>
-                                                <p><span>9 places</span></p>
+                                                                                                <p><span>9 places</span></p>
 											</div> 
 										</div>
 						  			</div>
@@ -262,7 +261,7 @@
 											<div class="item-title">
 												<a href="#">Australia</a>
 												<p><span>14 tours</span></p>
-                                                <p><span>12 places</span></p>
+                                                                                                <p><span>12 places</span></p>
 											</div> 
 										</div>
 						  			</div>
@@ -273,21 +272,21 @@
 											<div class="item-title">
 												<a href="#">Japan</a>
 												<p><span>10 tours</span></p>
-                                                <p><span>6 places</span></p>
+                                                                                                <p><span>6 places</span></p>
 											</div> 
 										</div>
 						  			</div>
 
                                       <div class="col-md-6">
-						  				<div class="filtr-item">
-											<img src="assets/images/sweden.jpg" alt="portfolio image"/>
-											<div class="item-title">
-												<a href="#">Scandinavia</a>
-												<p><span>18 tours</span></p>
-                                                <P><span>12 places</span></p>
-											</div>	
-										</div>
-						  			</div>
+				      <div class="filtr-item">
+					<img src="assets/images/sweden.jpg" alt="portfolio image"/>
+					<div class="item-title">
+					<a href="#">Scandinavia</a>
+					<p><span>18 tours</span></p>
+                                        <P><span>12 places</span></p>
+					</div>	
+					</div>
+					</div>
 
                                       <div class="col-md-4">
 						  				<div class="filtr-item">
