--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		<div class="container">
                 <div class="row align-items-end justify-content-left">
 		<div class="col-lg-12">
-		/div>
+		</div>
 		</div>
 		<div class="row">
 			<!-- single-feature -->
